--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "recognize the bird by its voice",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "style": "sass --watch style/sass/main.scss:style/style.css"
   },
   "author": "Albert Lavrinov",
   "license": "ISC"
